navbar items alignment and color fixes

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -16,7 +16,9 @@
 
 .nav-item {
     font-size: 16px;
-
+    background: $primary;
+    display: flex;         
+    align-items: center;     
     a {
         color: $content-background;
     }
